# kuri

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  kuri.toml
.github/workflows/: CI.yml
src/: cli.yaml  codegen.rs  discover_files.rs  error.rs  file_io.rs  file_rw.rs  main.rs  nio.rs  read_config.rs  test.rs
test/custom_flags/: file_1.test  file_2.test
test/file_discovery/: fd0.test.kbp  fd1.test.kbp  fd2.test.kbp
test/read_file/: fr1.test  fr2.test
