[package]
name = "kuri"
version = "0.1.0"
authors = ["Max Morrow"]
edition = "2018"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
ansi_term = "0.12.1"
indoc = "1.0"